ZOE-563 Fix incidnent list overflow container width

--- a/modules/dxp/apps/watson/watson-theme/src/css/_incidents_list.scss
+++ b/modules/dxp/apps/watson/watson-theme/src/css/_incidents_list.scss
@@ -82,7 +82,7 @@
 
 					.row-body {
 						text-align: center;
-						width: 60%;
+						width: 90%;
 					}
 
 					.row-body-overflow {
@@ -92,7 +92,7 @@
 						display: none;
 						padding-top: 7px;
 						text-align: center;
-						width: 60%;
+						width: 90%;
 					}
 
 					.row-content {
