--- a/modules/dxp/apps/watson/watson-theme/src/css/_view_index_list.scss
+++ b/modules/dxp/apps/watson/watson-theme/src/css/_view_index_list.scss
@@ -195,7 +195,7 @@
 
 						.row-body {
 							text-align: center;
-							width: 60%;
+							width: 90%;
 						}
 
 						.row-body-overflow {
